feat(presentation): expose feedback functionality through MemberController and response DTOs